Set up routing framework Fleshed out question adding framework Updated gruntfile with videogular fetching with bower

--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular": "~1.2.16",
     "angular-ui-router": "~0.2.10",
     "angular-animate": "~1.2.16",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "videogular": "~1.0.0"
   },
   "exportsOverride": {
     "angular": {
@@ -41,6 +42,9 @@
     },
     "jquery": {
       "jquery": "dist/jquery.min.js"
+    },
+    "videogular": {
+      "videogular": "videogular.min.js"
     }
   }
 }
