Basic video stuff working. Added new js libraries, unused so will remove later.

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,12 @@
     "angular-ui-router": "~0.2.10",
     "angular-animate": "~1.2.16",
     "jquery": "~2.1.1",
-    "videogular": "~1.0.0"
+    "videogular": "~1.0.0",
+    "angular-sanitize": "~1.2.16",
+    "videogular-controls": "~0.3.2",
+    "videogular-buffering": "~0.3.2",
+    "videogular-overlay-play": "~0.3.2",
+    "videogular-poster": "~0.3.2"
   },
   "exportsOverride": {
     "angular": {
@@ -44,7 +49,25 @@
       "jquery": "dist/jquery.min.js"
     },
     "videogular": {
-      "videogular": "videogular.min.js"
+      "videogular": [
+        "videogular.js",
+        "videogular.min.js"
+      ]
+    },
+    "angular-sanitize": {
+      "ng": "angular-sanitize.min.js"
+    },
+    "videogular-controls": {
+      "videogular": "controls.min.js"
+    },
+    "videogular-buffering": {
+      "videogular": "buffering.min.js"
+    },
+    "videogular-overlay-play": {
+      "videogular": "overlay-play.min.js"
+    },
+    "videogular-poster": {
+      "videogular": "poster.min.js"
     }
   }
 }
