--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "description": "Duzuro app for CS247",
   "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "express": "3.x"
+  },
   "devDependencies": {
-    "express": "3.x",
     "grunt": "~0.4.4",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
