--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "express": "3.x"
+    "express": "3.x", 
+    "jsdom": "0.2.x",
+    "http-agent": "0.1.x",
+    "request": "1.9.x"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
