--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "3.x", 
     "jsdom": "0.2.x",
     "http-agent": "0.1.x",
-    "request": "1.9.x"
+    "request": "1.9.x",
+    "jquery": "1.5.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
